--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "ant-design-vue": "^1.4.4",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "css-loader": "^3.2.0",
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
+    "md5": "^2.2.1",
+    "normalize.css": "^8.0.1",
+    "style-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-svg-component-runtime": "^1.0.1",
@@ -40,6 +44,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
+    "svgo": "^1.3.2",
     "vue-svg-icon-loader": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
     "webpack-theme-color-replacer": "^1.3.2"
