--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-.DS_Store
-node_modules
-/dist
-
-/tests/e2e/reports/
-selenium-debug.log
-chromedriver.log
-geckodriver.log
-
-# local env files
+# Local env files
+*.local
 .env.local
 .env.*.local
 
@@ -15,12 +7,22 @@ geckodriver.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+*.log*
+*.zip
+*.vi
+*~
+*.sass-cache
+package-lock.json
 
-# Editor directories and files
+# OS or Editor folders
+.DS_Store
+thumbs.db
+
+# Folders to ignore
+.CVS
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.history
+node_modules/
+dist/
