--- a/package.json
+++ b/package.json
@@ -7,41 +7,61 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "release": "standard-version --preset yl"
   },
   "dependencies": {
-    "ant-design-vue": "^1.4.4",
-    "axios": "^0.19.0",
-    "core-js": "^3.3.2",
-    "less": "^2.7.3",
-    "less-loader": "^5.0.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vue-svg-component-runtime": "^1.0.1",
-    "vuex": "^3.0.1"
+    "ant-design-vue": "1.4.4",
+    "axios": "0.19.0",
+    "core-js": "3.3.2",
+    "lodash.get": "4.4.2",
+    "md5": "2.2.1",
+    "moment": "2.24.0",
+    "normalize.css": "8.0.1",
+    "nprogress": "0.2.0",
+    "vue": "2.6.10",
+    "vue-router": "3.1.3",
+    "vue-svg-component-runtime": "1.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-unit-mocha": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/cli-plugin-babel": "4.0.0",
+    "@vue/cli-plugin-e2e-nightwatch": "4.0.0",
+    "@vue/cli-plugin-eslint": "4.0.0",
+    "@vue/cli-plugin-unit-mocha": "4.0.0",
+    "@vue/cli-service": "4.0.0",
+    "@vue/eslint-config-prettier": "5.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
-    "chai": "^4.1.2",
+    "babel-eslint": "10.0.3",
+    "chai": "4.1.2",
     "chromedriver": "75",
-    "commitlint-config-yl": "^1.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-ylfe": "^0.1.7",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "geckodriver": "^1.19.0",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "sass-loader": "^8.0.0",
-    "vue-svg-icon-loader": "^2.1.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-theme-color-replacer": "^1.3.2"
+    "commitlint-config-yl": "1.0.1",
+    "conventional-changelog-yl": "0.1.3",
+    "css-loader": "3.2.0",
+    "eslint": "5.16.0",
+    "eslint-config-ylfe": "0.1.7",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-vue": "5.0.0",
+    "geckodriver": "1.19.0",
+    "less": "3.10.3",
+    "less-loader": "5.0.0",
+    "prettier": "1.18.2",
+    "standard-version": "7.0.1",
+    "style-loader": "1.0.0",
+    "svgo": "1.3.2",
+    "vue-svg-icon-loader": "2.1.1",
+    "vue-template-compiler": "2.6.10",
+    "webpack-theme-color-replacer": "1.3.2"
+  },
+  "repository": {
+    "url": "ssh://git@gitlab.yongliweb.cn/tech/frontend/admintemplate.git"
+  },
+  "standard-version": {
+    "changelogHeader": "# CHANGELOG"
+  },
+  "changelog": {
+    "emojis": false,
+    "authorName": true,
+    "authorEmail": false
   }
 }
